k8s/codr.yaml
---
# Codr UI Service
apiVersion: v1
kind: Service
metadata:
  name: codr-srv
spec:
  ports:
    - protocol: TCP
      name: http
      port: 3000
  selector:
    app: codr
---
# Codr API Service
apiVersion: v1
kind: Service
metadata:
  name: codr-api-srv
spec:
  ports:
    - protocol: TCP
      name: api
      port: 8000
  selector:
    app: codr
---
# Codr Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: codr
  labels:
    app: codr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: codr
  template:
    metadata:
      labels:
        app: codr
    spec:
      containers:
        # Web client container
        - name: codr-ui
          # grab the container from the Github container registry
          image: ghcr.io/codrjs/webui:latest
          imagePullPolicy: "Always"
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
        # RESTful API container
        - name: codr-api
          # grab the container from the Github container registry
          image: ghcr.io/codrjs/api:latest
          imagePullPolicy: "Always"
          ports:
            - name: api
              containerPort: 8000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
