k8s/dev-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: codr-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: codr-api-srv
                port:
                  number: 8000
