k8s/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-web
            port:
              number: 3000
  - host: helm.codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-helm
            port:
              number: 80
  - host: api.codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway
            port:
              number: 80
  - host: design.codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-design
            port:
              number: 80
  - host: docs.codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-docs
            port:
              number: 3000
  - host: kafka.codr.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-kafka
            port:
              number: 8080
