k8s/traefik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codr-ui-notls
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`perc_lab.codrjs.com`)
    kind: Rule
    services:
    - name: codr-srv
      passHostHeader: true
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codr-ui-tls
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`perc_lab.codrjs.com`)
    kind: Rule
    services:
    - name: codr-srv
      passHostHeader: true
      port: 3000
  tls:
    certResolver: production
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codr-api-notls
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`perc_lab.codrjs.com`) && Path(`/api`)
    kind: Rule
    services:
    - name: codr-api-srv
      passHostHeader: true
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: codr-api-tls
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`perc_lab.codrjs.com`) && Path(`/api`)
    kind: Rule
    services:
    - name: codr-api-srv
      passHostHeader: true
      port: 3000
  tls:
    certResolver: production
